# py-static-gen

./: .gitignore  README.md  build.sh  main.sh  pyproject.toml  setup.py
docs/: index.html
docs/blog/glorfindel/: index.html
docs/blog/majesty/: index.html
docs/blog/tom/: index.html
docs/contact/: index.html
src/py_static_gen/: block_markdown.py  generatepage.py  htmlnode.py  inline_markdown.py  leafnode.py  main.py  nodeconverter.py  parentnode.py  textnode.py
tests/: test_block_markdown.py  test_generatepage.py  test_htmlnode.py  test_inline_markdown.py  test_leafnode.py  test_nodeconverter.py  test_parentnode.py  test_textnode.py
