[project]
name = "py_static_gen"
version = "0.1.0"
description = "Boot.dev Project - Python Static Site Generator"
readme = "README.md"
authors = [
    { name = "lucasgjanot", email = "lgjanot402@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
pystatic = "pystatic.main:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

